# quicknotes

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake
quicknotes/: CMakeLists.txt
quicknotes/src/: LoginDialog.h  main.cpp
res/: config.h.in
